# fonttools-opentype-feature-freezer

./: .gitignore  CHANGELOG.md  CONTRIBUTORS  Makefile  PLAN.md  README.md  REFACTOR_FILELIST.txt  REFACTOR_SPLITTING.md  RELEASE_GUIDE.md  TODO.md  WORKFLOW_SETUP.md  llms.txt  macdeploy  mypy.ini  pyproject.toml  pytest.ini  setup-workflows.sh
.github/workflows/: release.yml.example
app/: OTFeatureFreezer.py  dmgbuild_settings.py  featfreeze.iss  macdeploy  pyinstaller-mac.spec  pyinstaller-win.spec
github-workflows-templates/: ci.yml
mac-os-x-system-font-replacer/: MacOSXSystemFontReplacer.py  README.md
pyftfeatfreeze/: .coveragerc  .gitattributes  .gitignore  .pylintrc  AUTHORS  CONTRIBUTORS  README.md  pyftfeatfreeze.py  pyproject.toml
pyftfeatfreeze/src/opentype_feature_freezer/: __init__.py
pyftfeatfreeze/tests/: conftest.py
pyftfeatfreeze/tests/data/: EmptyNameID16_OTF.ttx  Empty_TTF.ttx
scripts/: build.sh  release.sh  test.sh
src/opentype_feature_freezer/: __init__.py  cli.py
tests/: test_cli.py  test_core.py  test_freeze.py  test_rename.py  test_version.py
tests/data/: EmptyNameID16_TTF.ttx  Empty_OTF.ttx  OpenSans-Bold.subset.ttx  SubGlyphsWithoutUnicode.ttx
ttxjson/: AUTHORS  README.md  ttxjson.py
