[tool.poetry]
name = "opentype-feature-freezer"
version = "1.32.2"
description = "Turns OpenType features 'on' by default in a font: reassigns the font's Unicode-to-glyph mapping fo permanently 'freeze' the 1-to-1 substitution features, and creates a new font."
authors = [
    "Adam Twardoch <adam@twardoch.com>",
    "Nikolaus Waxweiler <nikolaus.waxweiler@daltonmaag.com>",
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
fonttools = "^4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
pytest = "^5.2"
pytest-cov = "^2.8"
pytest-mypy = "^0.4.1"

[tool.poetry.scripts]
pyftfeatfreeze = "opentype_feature_freezer.cli:main"

[build-system]
requires = ["poetry>=0.12", "configparser>=5.0.0"]
build-backend = "poetry.masonry.api"
